Add key bind function

--- a/index.html
+++ b/index.html
@@ -19,58 +19,77 @@
     <h1>RaceTime</h1>
 
     <table>
-      <tbody id="entries">
+      <tbody tabindex = '0' id="entries">
+        <tfoot class = >
+          <tr>
+            <th class = "one">.</th>
+            <th class = "two">.</th>
+            <th class = "three">.</th>
+            <th class = "four">.</th>
+            <th class = "five">.</th>
+            <th class = "six" >.</th>
+            <th class = "seven">.</th>
+            <th class = "eight">.</th>
+            <th class = "nine">.</th>
+            <th class = "ten">.</th>
+            <th class = "elev">.</th>
+            <th class = "twelve">.</th>
+            <th class = "thirt">.</th>
+            <th class = "fourt">.</th>
+            <th class = "fift">.</th>
+            <th class ='sixt'>.</th>
+            <th class ='sevent'>.</th>
+            <th class ='eighte'>.</th>
+            <th class ='ninet'>.</th>
+            <th class ='twent'>.</th>
+            <th class ='twenone'>.</th>
+          </tr>
+          <tr>
+            <th class ='one1'>.</th>
+            <th class ='two2'>.</th>
+            <th class ='three3'>.</th>
+            <th class ='four4'>.</th>
+            <th class ='five5'>.</th>
+            <th class ='six6'>.</th>
+            <th class ='seven7'>.</th>
+            <th class ='eight8'>.</th>
+            <th class ='nine9'>.</th>
+            <th class ='ten10'>.</th>
+            <th class ='elev11'>.</th>
+            <th class ='twelve12'>.</th>
+            <th class ='thirt13'>.</th>
+            <th class ='fourt14'>.</th>
+            <th class ='fift15'>.</th>
+            <th class ='sixt16'>.</th>
+            <th class ='sevent17'>.</th>
+            <th class ='eighte18'>.</th>
+            <th class ='ninet19'>.</th>
+            <th class ='twent20'>.</th>
+            <th class ='twenone21'>.</th>
+          </tr>
+        </tfoot> -->
       </tbody>
 
-      <tfoot>
-        <tr>
-          <th class = "one">        .</th>
-          <th class = "two">      .</th>
-          <th class = "three">...       ..</th>
-          <th class = "four">.</th>
-          <th class = "five">.</th>
-          <th class = >.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-        </tr>
-        <tr>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-          <th>.</th>
-        </tr>
-      </tfoot>
-    </table>
+
+    <!-- </table>
+    <!-- <div class="col-md-6 col-md-offset-3" id="board">
+
+      <div class="row">
+        <div class="col-md-4 box one"></div>
+        <div class="col-md-4 box two"></div>
+        <div class="col-md-4 box three"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 box four"></div>
+        <div class="col-md-4 box five"></div>
+        <div class="col-md-4 box six"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 box seven"></div>
+        <div class="col-md-4 box eight"></div>
+        <div class="col-md-4 box nine"></div>
+      </div> -->
+      <a type="button" href='index.html' class="btn btn-primary btn-lg active">Reset</a>
 
   </body>
 </html>
