--- a/index.html
+++ b/index.html
@@ -17,57 +17,60 @@
 
   <body>
     <h1>RaceTime</h1>
+    <div class="Player one">
+      <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
+      <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
+
+    </div>
 
     <table>
       <tbody tabindex = '0' id="entries">
         <tfoot class = >
           <tr>
-            <th class = "one">.</th>
-            <th class = "two">.</th>
-            <th class = "three">.</th>
-            <th class = "four">.</th>
-            <th class = "five">.</th>
-            <th class = "six" >.</th>
-            <th class = "seven">.</th>
-            <th class = "eight">.</th>
-            <th class = "nine">.</th>
-            <th class = "ten">.</th>
-            <th class = "elev">.</th>
-            <th class = "twelve">.</th>
-            <th class = "thirt">.</th>
-            <th class = "fourt">.</th>
-            <th class = "fift">.</th>
-            <th class ='sixt'>.</th>
-            <th class ='sevent'>.</th>
-            <th class ='eighte'>.</th>
-            <th class ='ninet'>.</th>
-            <th class ='twent'>.</th>
-            <th class ='twenone'>.</th>
+            <th class = "one"></th>
+            <th class = "two"></th>
+            <th class = "three"></th>
+            <th class = "four"></th>
+            <th class = "five"></th>
+            <th class = "six" ></th>
+            <th class = "seven"></th>
+            <th class = "eight"></th>
+            <th class = "nine"></th>
+            <th class = "ten"></th>
+            <th class = "elev"></th>
+            <th class = "twelve"></th>
+            <th class = "thirt"></th>
+            <th class = "fourt"></th>
+            <th class = "fift"></th>
+            <th class ='sixt'></th>
+            <th class ='sevent'></th>
+            <th class ='eighte'></th>
+            <th class ='ninet'></th>
+            <th class ='twent'></th>
           </tr>
           <tr>
-            <th class ='one1'>.</th>
-            <th class ='two2'>.</th>
-            <th class ='three3'>.</th>
-            <th class ='four4'>.</th>
-            <th class ='five5'>.</th>
-            <th class ='six6'>.</th>
-            <th class ='seven7'>.</th>
-            <th class ='eight8'>.</th>
-            <th class ='nine9'>.</th>
-            <th class ='ten10'>.</th>
-            <th class ='elev11'>.</th>
-            <th class ='twelve12'>.</th>
-            <th class ='thirt13'>.</th>
-            <th class ='fourt14'>.</th>
-            <th class ='fift15'>.</th>
-            <th class ='sixt16'>.</th>
-            <th class ='sevent17'>.</th>
-            <th class ='eighte18'>.</th>
-            <th class ='ninet19'>.</th>
-            <th class ='twent20'>.</th>
-            <th class ='twenone21'>.</th>
+            <th class ='one1'></th>
+            <th class ='two2'></th>
+            <th class ='three3'></th>
+            <th class ='four4'></th>
+            <th class ='five5'></th>
+            <th class ='six6'></th>
+            <th class ='seven7'></th>
+            <th class ='eight8'></th>
+            <th class ='nine9'></th>
+            <th class ='ten10'></th>
+            <th class ='elev11'></th>
+            <th class ='twelve12'></th>
+            <th class ='thirt13'></th>
+            <th class ='fourt14'></th>
+            <th class ='fift15'></th>
+            <th class ='sixt16'></th>
+            <th class ='sevent17'></th>
+            <th class ='eighte18'></th>
+            <th class ='ninet19'></th>
+            <th class ='twent20'></th>
           </tr>
-        </tfoot> -->
+        </tfoot> 
       </tbody>
 
 
@@ -89,7 +92,7 @@
         <div class="col-md-4 box eight"></div>
         <div class="col-md-4 box nine"></div>
       </div> -->
-      <a type="button" href='index.html' class="btn btn-primary btn-lg active">Reset</a>
+      <!-- <a type="button" href='index.html' class="btn btn-primary btn-lg active">Reset</a> -->
 
   </body>
 </html>
