--- a/index.html
+++ b/index.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>jSon Race Game</title>
-    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/main.css">
-    <!-- JS -->
     <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
-    <!-- Custom JS -->
     <script src="scripts/main.js"></script>
+
   </head>
-
   <body>
-    <h1>RaceTime</h1>
-    <div class="Player one">
-      <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
-      <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
-
-    </div>
+    <h1>Hassle Rock</h1>
+      <div class="col-md-12 buchannon">
+        <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
+      </div>
+      <div class="col-md-12 knightRider">
+        <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
+      </div>
 
     <table>
       <tbody tabindex = '0' id="entries">
@@ -70,29 +66,7 @@
             <th class ='ninet19'></th>
             <th class ='twent20'></th>
           </tr>
-        </tfoot> 
+        </tfoot>
       </tbody>
-
-
-    <!-- </table>
-    <!-- <div class="col-md-6 col-md-offset-3" id="board">
-
-      <div class="row">
-        <div class="col-md-4 box one"></div>
-        <div class="col-md-4 box two"></div>
-        <div class="col-md-4 box three"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 box four"></div>
-        <div class="col-md-4 box five"></div>
-        <div class="col-md-4 box six"></div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 box seven"></div>
-        <div class="col-md-4 box eight"></div>
-        <div class="col-md-4 box nine"></div>
-      </div> -->
-      <!-- <a type="button" href='index.html' class="btn btn-primary btn-lg active">Reset</a> -->
-
-  </body>
+    </body>
 </html>
