add function that recognizes winner

--- a/index.html
+++ b/index.html
@@ -12,61 +12,11 @@
   </head>
   <body>
     <h1>Hassle Rock</h1>
-      <div class="col-md-12 buchannon">
-        <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
-      </div>
-      <div class="col-md-12 knightRider">
-        <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
-      </div>
-
-    <table>
-      <tbody tabindex = '0' id="entries">
-        <tfoot class = >
-          <tr>
-            <th class = "one"></th>
-            <th class = "two"></th>
-            <th class = "three"></th>
-            <th class = "four"></th>
-            <th class = "five"></th>
-            <th class = "six" ></th>
-            <th class = "seven"></th>
-            <th class = "eight"></th>
-            <th class = "nine"></th>
-            <th class = "ten"></th>
-            <th class = "elev"></th>
-            <th class = "twelve"></th>
-            <th class = "thirt"></th>
-            <th class = "fourt"></th>
-            <th class = "fift"></th>
-            <th class ='sixt'></th>
-            <th class ='sevent'></th>
-            <th class ='eighte'></th>
-            <th class ='ninet'></th>
-            <th class ='twent'></th>
-          </tr>
-          <tr>
-            <th class ='one1'></th>
-            <th class ='two2'></th>
-            <th class ='three3'></th>
-            <th class ='four4'></th>
-            <th class ='five5'></th>
-            <th class ='six6'></th>
-            <th class ='seven7'></th>
-            <th class ='eight8'></th>
-            <th class ='nine9'></th>
-            <th class ='ten10'></th>
-            <th class ='elev11'></th>
-            <th class ='twelve12'></th>
-            <th class ='thirt13'></th>
-            <th class ='fourt14'></th>
-            <th class ='fift15'></th>
-            <th class ='sixt16'></th>
-            <th class ='sevent17'></th>
-            <th class ='eighte18'></th>
-            <th class ='ninet19'></th>
-            <th class ='twent20'></th>
-          </tr>
-        </tfoot>
-      </tbody>
-    </body>
+    <div class="col-md-12 buchannon">
+      <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
+    </div>
+    <div class="col-md-12 knight">
+      <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
+    </div>
+  </body>
 </html>
