--- a/index.html
+++ b/index.html
@@ -11,12 +11,23 @@
 
   </head>
   <body>
-    <h1>Hassle Rock</h1>
-    <div class="col-md-7 buchannon">
-      <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
+    <h1>Hassle Off</h1>
+    <div class="bayWin">
     </div>
-    <div class="col-md-7 knight">
-      <img class ="hassle1" src="http://www.canada.com/cms/binary/7525845.jpg" alt="racecar" />
+
+    <div class="col-md-10 mainTrack">
+      <div class="col-md-10 col-offset-1 centered  buchannon">
+        <img class ="hassle" src="http://cdn3-www.comingsoon.net/assets/uploads/2016/03/hasselhoffbaywatch.jpg" alt="racecar" />
+      </div>
+      <div class="col-md-10 col-offset-1 centered  knight">
+        <img class ="hassle1" src="images/hasslehoff.jpg" alt="racecar" />
+      </div>
     </div>
+
+
+    <audio id="buzzer1" src="audio/baywatch.mp3" type="audio/ogg">
+    <audio id="buzzer" src="audio/knightRider.mp3" type="audio/ogg">
+
   </body>
+
 </html>
