add feature that stops movement of other player once winner is determined

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <h1>Hassle Off</h1>
-    <div class="bayWin">
-    </div>
+    <!-- <div class="col-md-4 bayWin">
+    </div> -->
 
     <div class="col-md-10 mainTrack">
       <div class="col-md-10 col-offset-1 centered  buchannon">
